--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 18 17:45:27 CST 2021
-sdk.dir=/home/daniel/Android/Sdk
+#Fri Dec 03 10:27:31 CST 2021
+sdk.dir=C\:\\Users\\dking\\AppData\\Local\\Android\\Sdk
