--- a/local.properties
+++ b/local.properties
@@ -4,7 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-
-#Fri Dec 03 15:25:56 CST 2021
-
-sdk.dir=C\:\\Users\\dking\\AppData\\Local\\Android\\Sdk
+#Sat Dec 04 14:36:11 CST 2021
+sdk.dir=/home/daniel/Android/Sdk
