--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    repositories {
+        maven { url "https://jitpack.io" }
+    }
 }
 
 
@@ -46,4 +50,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     // Firebase
     implementation 'com.google.firebase:firebase-storage:19.2.2'
+    // file picker
+    implementation 'com.github.codekidX:storage-chooser:2.0.4.4'
 }
